<resources>
    <string name="app_name">HomeGuard</string>
    <string name="temperature_mode">Fahrenheit</string>
    <!-- Strings used for fragments for navigation -->
    <string name="environment_data_fragment_label">Temperature &amp; Humidity</string>
    <string name="flood_data_fragment_label">Flooding</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="temperature_label">Temperature (C)</string>
    <string name="humidity_label">Humidity (%)</string>
    <string name="status_label">Status</string>
    <string name="water_level_label">Water Level (cm)</string>
    <string name="temperature_default">0</string>
    <string name="humidity_default">0</string>
    <string name="status_default">Normal</string>
    <string name="water_level_default">0</string>

    <string name="hello_second_fragment">Arg: %1$s</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>